--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "RectangleDb": "Host=localhost;Database=rectangledb;Username=rectuser;Password=test123;"
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   }
 }
