--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,6 +9,6 @@
     "RectangleDb": "Host=localhost;Database=rectangledb;Username=rectuser;Password=test123;"
   },
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "vG9lBSHlFhNKJRmv2ZSf5lauc"
   }
 }
